# monadoc-3

./: .gitignore  Main.hs  monadoc.cabal  stack.yaml
